--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "Toni Asikainen",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eslint": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
